<resources>
    <string name="app_name">DTV2GO</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_video">VideoActivity</string>

    <string-array name="nav_drawer_items">
        <item>Logo</item>
        <item>Glavni meni</item>
        <item>Lista kanala</item>
        <item>Omiljeni kanali</item>
        <item>Video na zahtev</item>
        <item>Ostalo</item>
        <item>Podešavanja</item>
        <item>O aplikaciji</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_list</item>
        <item>@drawable/ic_favourites</item>
        <item>@drawable/ic_play</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_info</item>
    </array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_video">TestVideoActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="logo_desc">Sat-Trakt</string>
    <string name="username_hint">korisničko ime</string>
    <string name="password_hint">lozinka</string>
    <string name="login_button">Prijavite se</string>
    <string name="contact_button">Nemate nalog? Aktivirajte uslugu ovde</string>
    <string name="imei">Molimo potvrdite vezivanje ovog uređaja za Vaš nalog.</string>
    <string name="welcome">Dobrodošli</string>
    <string name="accept">Prihvatam</string>
    <string name="refuse">Odustajem</string>

    <string name="empty_favourites">Lista omiljenih kanala je prazna. Dugim pritiskom na željeni kanal pojaviće se opcija kojom ga možete dodati u ovu listu.</string>

    <string name="genres0">Svi žanrovi</string>
    <string name="genres1">Akcija</string>
    <string name="genres2">Avantura</string>
    <string name="genres3">Komedija</string>
    <string name="genres4">Drama</string>
    <string name="genres5">Fantazija</string>
    <string name="genres6">Horor</string>
    <string name="genres7">Misterija</string>
    <string name="genres8">Romantika</string>
    <string name="genres9">Triler</string>

    <string name="error_title">Greška</string>
    <string name="error_username_required">Potrebno je da unesete korisničko ime!</string>
    <string name="error_password_required">Potrebno je da unesete lozinku!</string>
    <string name="error_all_accounts_used">Iskoristili se sva tri dostupna naloga!</string>
    <string name="error_login_disabled">Vaš pristup je onemogućen. Kontaktiraje korisnički servis.</string>
    <string name="error_login_invalid">Uneti podaci nisu validni.</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="about">DTV 2 GO je aplikacija koja korisnicima servisa Interneta i digitalne televizije kablovskog operatera Sat-Trakt omogućuje gledanje TV servisa na mobilnim uređajima baziranim na Android operativnom sistemu.</string>

</resources>
