<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211E20"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_group">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:hint="@string/username_hint"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:padding="9dp"
            android:textColor="#D0D2D3"
            android:textColorHint="#A6AAAC"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/back"
            android:hint="@string/password_hint"
            android:imeOptions="actionGo"
            android:inputType="textNoSuggestions|textPassword"
            android:lines="1"
            android:padding="9dp"
            android:textColor="#D0D2D3"
            android:textColorHint="#A6AAAC"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_button"
            android:text="@string/login_button"
            android:textColor="#D0D2D3"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_button"
        android:text="@string/contact_button"
        android:textColor="#D0D2D3"
        android:textSize="16sp" />

</RelativeLayout>