<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#211E20"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/info_group">

        <ImageView
            android:id="@+id/login_logo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/info_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#D0D2D3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/imei"
            android:textColor="#D0D2D3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_button"
            android:text="@string/accept"
            android:textColor="#D0D2D3"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/bRefuse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_button"
        android:text="@string/refuse"
        android:textColor="#D0D2D3"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
